pushing vm code already reviewed