@@ -21,9 +21,29 @@
  * questions.
  */
 
-// Small class used by SealedModuleTest
-package sealedP2;
+/*
+ * @test
+ * @bug 8225056
+ * @compile --enable-preview -source ${jdk.version} SealedTest.java
+ * @run main/othervm --enable-preview SealedTest
+ */
 
-public final class c2 extends sealedP1.superClass {
-    public void method2() { }
+public class SealedTest {
+
+    sealed class Sealed1 permits Sub1 {}
+
+    final class Sub1 extends Sealed1 {}
+
+    sealed interface SealedI1 permits Sub2 {}
+
+    final class Sub2 extends Sealed2 implements SealedI1 {}
+
+    sealed class Sealed2 permits Sub2 {}
+
+    Sub1 sub1 = new Sub1();
+    Sub2 sub2 = new Sub2();
+
+    public static void main(String... args) {
+        System.out.println("Basic testing of sealed types");
+    }
 }
