@@ -21,24 +21,6 @@
  * questions.
  */
 
-/*
- * @test
- * @compile --enable-preview -source ${jdk.version} abstractSealedTest.java
- * @run main/othervm --enable-preview abstractSealedTest
- */
+package otherPkg;
 
-// Test that a sealed class can be abstract
-public class abstractSealedTest {
-
-    abstract sealed class abstractShape permits Circle {
-        abstract void draw();
-    }
-
-    final class Circle extends abstractShape {
-        void draw() {}
-    }
-
-    Circle circle = new Circle();
-
-    public static void main(String... args) { }
-}
+public final class WrongPackage implements Pkg.SealedInterface { }
